Update project files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,7 +107,7 @@ DialogueFilenameFormat="{DialogueGuid}_{ContextId}"
 GameName=GameUFPS
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FPS/Maps/GameModes/Conquest.Conquest
+EditorStartupMap=/Game/FPS/Maps/Menus/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=/Game/FPS/Maps/Menus/TravelLevel.TravelLevel
 bUseSplitscreen=True
@@ -116,8 +116,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/FPS/Blueprints/GameModes/GameInstance/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/FPS/Maps/Menus/Intro.Intro
-ServerDefaultMap=/Game/FPS/Maps/Menus/Intro.Intro
+GameDefaultMap=/Game/FPS/Maps/Menus/MainMenu.MainMenu
+ServerDefaultMap=/Game/Ross/Ross/Ross1.Ross1
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
