--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CFAC4FF843C5BC92D76A7F8F3E5C9A67
-ProjectName=FPS Multiplayer Template
-ProjectVersion=5.0
+ProjectName=Blast Arena
+ProjectVersion=0.8
 bUseBorderlessWindow=True
 SupportContact=
 
