Update .gitignore and remove large binary files
- Added patterns to ignore large binary files (*.pdb, *.pak, *.ucas, *.utoc)
- Removed large binary files that exceed GitHub's file size limit
- Updated .gitignore to prevent tracking of build artifacts and large files in the future

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,13 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Large binary files
+*.pdb
+*.pak
+*.ucas
+*.utoc
+
+# Windows specific
+Windows/GameUFPS/Binaries/**
+Windows/GameUFPS/Content/Paks/**
